# backend/src/main/java/br/dev/xb/isperp/controller/InventoryController.java
@@ -1,24 +1,27 @@
 package br.dev.xb.isperp.controller;
 
-import br.dev.xb.isperp.entity.InventoryItem;
+import br.dev.xb.isperp.api.contract.InventoryApi;
+import br.dev.xb.isperp.api.dto.InventoryItemResponse;
+import br.dev.xb.isperp.mapper.InventoryMapper;
 import br.dev.xb.isperp.service.InventoryService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.*;
+import org.springframework.web.bind.annotation.CrossOrigin;
+import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
 
 @RestController
-@RequestMapping("/inventory")
 @CrossOrigin(origins = "*")
 @RequiredArgsConstructor
 @SuppressWarnings("null")
-public class InventoryController {
+public class InventoryController implements InventoryApi {
 
     private final InventoryService inventoryService;
+    private final InventoryMapper inventoryMapper;
 
-    @GetMapping
-    public ResponseEntity<List<InventoryItem>> getAllItems() {
-        return ResponseEntity.ok(inventoryService.getAllItems());
+    @Override
+    public ResponseEntity<List<InventoryItemResponse>> getAllInventoryItems() {
+        return ResponseEntity.ok(inventoryMapper.toInventoryItemResponseList(inventoryService.getAllItems()));
     }
 }
